--- a/panel.html
+++ b/panel.html
@@ -220,6 +220,8 @@
                     } else {
                         alert("Error al cargar el documento");
                     }
+                    // reload
+                    location.reload();
 				});
 		</script>
 	</body>
