--- a/panel.html
+++ b/panel.html
@@ -193,6 +193,8 @@
                     `;
 						docs.appendChild(div);
 					});
+
+					$("#modalGetDocs").modal("hide");
 				});
             document
 				.querySelector("#formLoadDocs")
